# libsparseir-fortran-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
test/: test_sparseir.f90
